# auto-metamask

./: pyproject.toml
auto_metamask/: core.py
