[tool.poetry]
name = "auto-metamask"
version = "0.1.0"
description = ""
authors = ["Alan WANG <alan1995wang@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium-stealth = "^1.0.6"
selenium = "^4.20.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
