[tool.poetry]
name = "auto-metamask"
version = "1.1.1"
description = ""
authors = ["Alan WANG <alan1995wang@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium-stealth = "^1.0.6"
selenium = "^4.20.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
